// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ui/PageHeader Surtitre Titre Et Bouton 1`] = `
<div
  className="sticky top-0 z-40 bg-bf925 w-full min-h-[112px] flex items-center justify-center "
>
  <div
    className="fr-container my-4"
  >
    <p
      className="m-0"
    >
      Sur titre
    </p>
    <h2
      className="mb-4"
    >
      Titre
    </h2>
    <button
      className="fr-btn self-start"
    >
      Bouton
    </button>
  </div>
</div>
`;

exports[`Storyshots ui/PageHeader Titre Central 1`] = `
<div
  className="sticky top-0 z-40 bg-bf925 w-full min-h-[112px] flex items-center justify-center "
>
  <h2
    className="w-full text-center m-0"
  >
    Titre au centre
  </h2>
</div>
`;

exports[`Storyshots ui/PageHeader Titre Et Bouton 1`] = `
<div
  className="sticky top-0 z-40 bg-bf925 w-full min-h-[112px] flex items-center justify-center "
>
  <div
    className="fr-container my-4"
  >
    <h2
      className="mb-4"
    >
      Titre
    </h2>
    <button
      className="fr-btn self-start"
    >
      Bouton
    </button>
  </div>
</div>
`;
